@@ -307,3 +307,4 @@
     - Improved IDD_ADDCTRL and IDD_CTRLPROP dialogs.
 - v.5.8.2 (2024-XX-YY)
     - Added ES_AUTOHSCROLL style to some text boxes.
+    - Fixed loading failure of Win2k3 ieframe.dll BITMAP 214.
