@@ -308,3 +308,4 @@
     - IDD_ADDCTRL 및 IDD_CTRLPROP 대화 상자가 개선되었습니다.
 - v.5.8.2 (2024-XX-YY)
     - Added ES_AUTOHSCROLL style to some text boxes.
+    - Fixed loading failure of Win2k3 ieframe.dll BITMAP 214.
